--- a/css/demo.css
+++ b/css/demo.css
@@ -1,22 +1,44 @@
 /* General Blueprint Style */
+
 @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 @font-face {
-	font-family: 'bpicons';
-	src:url('../fonts/bpicons/bpicons.eot');
-	src:url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/bpicons/bpicons.woff') format('woff'),
-		url('../fonts/bpicons/bpicons.ttf') format('truetype'),
-		url('../fonts/bpicons/bpicons.svg#bpicons') format('svg');
-	font-weight: normal;
-	font-style: normal;
-} /* Made with http://icomoon.io/ */
+    font-family: 'bpicons';
+    src: url('../fonts/bpicons/bpicons.eot');
+    src:
+			url('../fonts/bpicons/bpicons.eot?#iefix') format('embedded-opentype'),
+			url('../fonts/bpicons/bpicons.woff') format('woff'),
+			url('../fonts/bpicons/bpicons.ttf') format('truetype'),
+			url('../fonts/bpicons/bpicons.svg#bpicons') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
-*, *:after, *:before { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-body, html { font-size: 100%; padding: 0; margin: 0;}
+
+/* Made with http://icomoon.io/ */
+
+*, *:after, *:before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body, html {
+    font-size: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 
 /* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-.clearfix:before, .clearfix:after { content: " "; display: table; }
-.clearfix:after { clear: both; }
+
+.clearfix:before, .clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
 
 body {
     font-family: 'Lato', Calibri, Arial, sans-serif;
@@ -24,129 +46,128 @@ body {
 }
 
 a {
-	color: #21759b;
-	text-decoration: none;
-	outline: none;
+    color: #21759b;
+    text-decoration: none;
+    outline: none;
 }
 
 a:hover {
-	color: #000;
+    color: #000;
 }
 
-.container > header {
-	width: 90%;
-	max-width: 69em;
-	margin: 0 auto;
-	padding: 2.875em 1.875em 1.875em;
+.container>header {
+    width: 90%;
+    max-width: 69em;
+    margin: 0 auto;
+    padding: 2.875em 1.875em 1.875em;
 }
 
-.container > header h1 {
-	font-size: 2.125em;
-	line-height: 1.3;
-	margin: 0 0 0.6em 0;
-	float: left;
-	font-weight: 400;
+.container>header h1 {
+    font-size: 2.125em;
+    line-height: 1.3;
+    margin: 0 0 0.6em 0;
+    float: left;
+    font-weight: 400;
 }
 
-.container > header > span {
-	display: block;
-	position: relative;
-	z-index: 200;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 0.5em;
-	padding: 0 0 0.6em 0.1em;
+.container>header>span {
+    display: block;
+    position: relative;
+    z-index: 200;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.5em;
+    padding: 0 0 0.6em 0.1em;
 }
 
-.container > header > span span:after {
-	width: 30px;
-	height: 30px;
-	left: -12px;
-	font-size: 50%;
-	top: -8px;
-	font-size: 75%;
-	position: relative;
+.container>header>span span:after {
+    width: 30px;
+    height: 30px;
+    left: -12px;
+    font-size: 50%;
+    top: -8px;
+    font-size: 75%;
+    position: relative;
 }
 
-.container > header > span span:hover:before {
-	content: attr(data-content);
-	text-transform: none;
-	text-indent: 0;
-	letter-spacing: 0;
-	font-weight: 300;
-	font-size: 110%;
-	padding: 0.8em 1em;
-	line-height: 1.2;
-	text-align: left;
-	left: auto;
-	margin-left: 4px;
-	position: absolute;
-	color: #fff;
-	background: #47a3da;
+.container>header>span span:hover:before {
+    content: attr(data-content);
+    text-transform: none;
+    text-indent: 0;
+    letter-spacing: 0;
+    font-weight: 300;
+    font-size: 110%;
+    padding: 0.8em 1em;
+    line-height: 1.2;
+    text-align: left;
+    left: auto;
+    margin-left: 4px;
+    position: absolute;
+    color: #fff;
+    background: #47a3da;
 }
 
 .bp-icon:after {
-	font-family: 'bpicons';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	text-align: center;
-	color: #47a3da;
-	-webkit-font-smoothing: antialiased;
+    font-family: 'bpicons';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    text-align: center;
+    color: #47a3da;
+    -webkit-font-smoothing: antialiased;
 }
 
-.container > header nav .bp-icon:after {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	line-height: 2;
-	text-indent: 0;
+.container>header nav .bp-icon:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    line-height: 2;
+    text-indent: 0;
 }
 
-.container > header nav a:hover:after {
-	color: #fff;
+.container>header nav a:hover:after {
+    color: #fff;
 }
 
 .bp-icon-next:after {
-	content: "\e000";
+    content: "\e000";
 }
+
 .bp-icon-drop:after {
-	content: "\e001";
+    content: "\e001";
 }
+
 .bp-icon-archive:after {
-	content: "\e002";
+    content: "\e002";
 }
+
 .bp-icon-about:after {
-	content: "\e003";
+    content: "\e003";
 }
+
 .bp-icon-prev:after {
-	content: "\e004";
+    content: "\e004";
 }
 
 @media screen and (max-width: 55em) {
-
-	.container > header h1,
-	.container > header nav {
-		float: none;
-	}
-
-	.container > header > span,
-	.container > header h1 {
-		text-align: center;
-	}
-
-	.container > header nav {
-		margin: 0 auto;
-	}
-
-	.container > header > span {
-		text-indent: 30px;
-	}
+    .container>header h1, .container>header nav {
+        float: none;
+    }
+    .container>header>span, .container>header h1 {
+        text-align: center;
+    }
+    .container>header nav {
+        margin: 0 auto;
+    }
+    .container>header>span {
+        text-indent: 30px;
+    }
 }
+
 
 /* Refarence https://github.com/sharu725/vyaasa/blob/4583e654f3f521430e8f8e1dfc999626a77167fb/_sass/_layout.scss */
 
@@ -155,21 +176,19 @@ a:hover {
 }
 
 .nav-link {
-		color: #515151;
+    color: #515151;
     margin-left: 10px;
     border-radius: 2px;
     padding: 5px 10px;
     text-decoration: none;
     font-family: sans-serif;
     border: none;
-    &:hover{
+    &:hover {
         color: $background-color;
         background: $brand-color;
     }
-
     @include media-query($on-laptop) {
-            font-size: 0.8em;
-            margin-left: 5px;
-
+        font-size: 0.8em;
+        margin-left: 5px;
     }
 }
