--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/css/component.css" />
-    <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}font-awesome/css/font-awesome.min.css" />
     <script src="{{ site.url }}/js/modernizr.custom.js"></script>
 </head>
 
@@ -21,13 +21,6 @@
 
     {{ content }}
 
-    <script src="{{ site.url }}/js/imagesloaded.pkgd.min.js"></script>
-    <script src="{{ site.url }}/js/masonry.pkgd.min.js"></script>
-    <script src="{{ site.url }}/js/classie.js"></script>
-    <script src="{{ site.url }}/js/cbpGridGallery.js"></script>
-    <script>
-        new CBPGridGallery(document.getElementById('grid-gallery'));
-    </script>
 </body>
 
 </html>
