--- a/css/component.css
+++ b/css/component.css
@@ -178,7 +178,7 @@
 .slideshow nav span {
     position: fixed;
     z-index: 1000;
-    color: #fff;
+    color: #ccc;
     text-align: center;
     padding: 3%;
     cursor: pointer;
@@ -199,7 +199,7 @@
     top: 0;
     right: 0;
     padding: 0.5em 1em;
-    color: #fff;
+    color: #ccc;
 }
 
 .icon:before, .icon:after {
@@ -237,7 +237,7 @@ span.nav-close:before {
     font-size: 8px;
     padding-top: 20px;
     text-transform: uppercase;
-    color: #fff;
+    color: #ccc;
     letter-spacing: 1px;
     text-align: center;
 }
@@ -247,7 +247,7 @@ span.nav-close:before {
     top: 0;
     width: 16px;
     height: 16px;
-    border: 1px solid #fff;
+    border: 1px solid #ccc;
     text-align: center;
     line-height: 14px;
     font-size: 12px;
