Fixed directory name

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="post-headline" style="color: #{{ page.color }};">{{ page.caption_header }}, {{  page.caption }}</h1>
   <div class="meta"><span>{{page.date | date: '%B %d, %Y'}}</span></div>
   <figure>
-    <img src="{{ site.url }}/img/large/{{ page.photo }}" alt="img" />
+    <img src="{{ site.url }}/img/horizontal/{{ page.photo }}" alt="img" />
   </figure>
 
   {{content}}
