--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="img/{{site.icon}}">
+    <link rel="shortcut icon" type="image/png" href="{{ site.url }}/img/{{site.icon}}">
     <title>{{ site.name }}</title>
     <meta name="description" content="{{ site.description }}" />
     <meta name="keywords" content="jekyll, image gallery, image grid, masonry, iggg, comiket" />
